chore: add packages

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "mkdirp": "^3.0.1",
     "ncp": "^2.0.0",
     "graphql-to-sqlite-ddl": "^2.0.4",
-    "snake-case": "^4.0.0"
+    "snake-case": "^4.0.0",
+    "pluralize": "^8.0.0"
   },
   "dev-dependencies": {}
 }
